8325520: Vector loads and stores with indices and masks incorrectly compiled

Reviewed-by: epeter, thartmann